force-app/main/default/objects/Performance_Review__c/Performance_Review__c.object-meta.xml
<CustomObject>
    <label>Performance Review</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Performance Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>