force-app/main/default/objects/Performance_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employees__c</columns>
    <columns>Review_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>